Modernize, add main() to FedexTracker